--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0 auto;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -11,23 +15,58 @@ header {
     max-width: 940px;
     margin: 0 auto;
 }
-span {
-    display: flexbox;
 
+header .wrapper {
+    max-width: 940px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between ;
 }
 
-
-body {
-    margin: 0 auto;
+.name {
+    display: flex;
+    justify-content: left;
 }
-
-
 
 nav ul {
     display: flex;
+    justify-content: right;
     list-style: none;
 }
 
+nav ul li a:link {
+    display: flex;
+    padding: 10px;
+    color:#fff;
+    text-decoration: none;
+}
 
+#hero {
+    height: 600px;
+
+    background-color: #7251b5;
+    background-image: url(../images/hands-typing.jpg);
+    filter: grayscale(70%);
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    color: #fff;
+    font-size: 3rem;
+    text-shadow: 2px 2px 6px #000;
+    max-width: 60%;
+    text-align: center;
+    background-color: #000 (0, 0 , 0.496);
+    padding: 20px;
+}
+
+img {
+    width: 100%;
+}
 
 
