--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,7 @@ nav ul {
     list-style: none;
 }
 
-nav ul li a:link {
-    display: flex;
+nav ul li a {
     padding: 10px;
     color:#fff;
     text-decoration: none;
@@ -50,6 +49,7 @@ nav ul li a:link {
     filter: grayscale(70%);
     background-repeat: no-repeat;
     background-position: center center;
+    background-size: cover;
 
     display: flex;
     align-items: center;
@@ -74,7 +74,10 @@ img {
     display: flex;
     justify-content: center;
     max-width: 940px;
-
 }
 
+.grid-1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
 
