--- a/css/style.css
+++ b/css/style.css
@@ -72,12 +72,12 @@ img {
 
 #about-me {
     display: flex;
-    justify-content: center;
     max-width: 940px;
+    align-content: center;
+    justify-content: center;
 }
 
 .grid-1 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
-
