--- a/css/style.css
+++ b/css/style.css
@@ -70,14 +70,54 @@ img {
     width: 100%;
 }
 
-#about-me {
+.flex-1 {
     display: flex;
-    max-width: 940px;
-    align-content: center;
-    justify-content: center;
+    align-items: center;
 }
 
-.grid-1 {
+.flex-1 div {
+    width: 65%;
+}
+
+.flex-1 img {
+    width: 35%;
+}
+
+
+.gallery{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
+    grid-template-areas:
+    "img1 img1 img1 img2 img2 img2"
+    "img3 img3 img4 img4 img5 img5"
+    ;
+}
+
+.gallery img:nth-child(1){
+    grid-area: img1;
+}
+
+.gallery img:nth-child(2){
+    grid-area: img2;
+}
+
+.gallery img:nth-child(3){
+    grid-area: img3;
+}
+
+.gallery img:nth-child(4){
+    grid-area: img4;
+}
+
+.gallery img:nth-child(5){
+    grid-area: img5;
+}
+
+footer{
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 15;
 }
