--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,26 @@ img {
     gap: 40px;
 }
 
+.btn {
+    background-color:#000;
+    color:#fff;
+    text-decoration: none;
+    padding: 5px;
+    
 
+}
 
+.btn:hover {
+    background-color: #fff;
+    color:#000;
+    text-decoration: none;
+    padding: 5px;
+}
+
+h2 {
+    display: flex;
+    justify-content: center;
+}
 
 
 .gallery{
