--- a/css/style.css
+++ b/css/style.css
@@ -97,13 +97,20 @@ img {
     gap: 40px;
 }
 
+article {
+    display: flex;
+    flex-flow: column wrap;
+    
+}
+
 .btn {
     background-color:#000;
     color:#fff;
     text-decoration: none;
+    margin: auto;
     padding: 5px;
+    justify-items: flex-start;
     
-
 }
 
 .btn:hover {
@@ -113,7 +120,7 @@ img {
     padding: 5px;
 }
 
-h2 {
+.header2 {
     display: flex;
     justify-content: center;
 }
